--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "express_mongo",
-    "version": "1.0.0",
-    "main": "src/index.ts",
-    "author": "Yu Qin <sirius.qinyu@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-        "build": "tsc",
-        "start": "node -r tsconfig-paths/register ./out/index.js",
-        "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts"
-    },
-    "devDependencies": {
-        "@types/node": "^17.0.10",
-        "ts-node": "^10.4.0",
-        "tsconfig-paths": "^3.12.0",
-        "typescript": "^4.5.5"
-    },
-    "dependencies": {
-        "ts-node-dev": "^1.1.8"
-    }
+  "name": "express_mongo",
+  "version": "1.0.0",
+  "main": "src/index.ts",
+  "author": "Yu Qin <sirius.qinyu@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node -r tsconfig-paths/register ./out/index.js",
+    "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.5.1",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "ts-node-dev": "^1.1.8"
+  }
 }
