--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "express_mongo",
-  "version": "1.0.0",
-  "main": "src/index.ts",
-  "author": "Yu Qin <sirius.qinyu@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc",
-    "start": "node -r tsconfig-paths/register ./out/index.js",
-    "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "jest": "^27.4.7",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "ts-node-dev": "^1.1.8"
-  }
+    "name": "express_mongo",
+    "version": "1.0.0",
+    "main": "src/index.ts",
+    "author": "Yu Qin <sirius.qinyu@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "build": "tsc",
+        "start": "node -r tsconfig-paths/register ./out/index.js",
+        "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
+        "test": "jest",
+        "lint": "eslint"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.10",
+        "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@typescript-eslint/parser": "^5.10.0",
+        "eslint": "^8.7.0",
+        "eslint-config-prettier": "^8.3.0",
+        "jest": "^27.4.7",
+        "prettier": "2.5.1",
+        "supertest": "^6.2.2",
+        "ts-jest": "^27.1.3",
+        "ts-node": "^10.4.0",
+        "tsconfig-paths": "^3.12.0",
+        "typescript": "^4.5.5"
+    },
+    "dependencies": {
+        "express": "^4.17.2",
+        "ts-node-dev": "^1.1.8"
+    }
 }
