--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "license": "MIT",
     "scripts": {
         "build": "tsc",
-        "start": "node -r tsconfig-paths/register ./out/index.js",
-        "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
-        "test": "jest",
+        "start": "ENV_FILE=./config/.env.prod  node -r tsconfig-paths/register ./out/index.js",
+        "dev": "ENV_FILE=./config/.env.dev tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
+        "test": "ENV_FILE=./config/.env.test jest",
         "lint": "eslint"
     },
+    "dependencies": {
+        "dotenv-extended": "^2.9.0",
+        "dotenv-parse-variables": "^2.0.0",
+        "express": "^4.17.2"
+    },
     "devDependencies": {
+        "@types/dotenv-parse-variables": "^2.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.10",
@@ -25,11 +31,8 @@
         "supertest": "^6.2.2",
         "ts-jest": "^27.1.3",
         "ts-node": "^10.4.0",
+        "ts-node-dev": "^1.1.8",
         "tsconfig-paths": "^3.12.0",
         "typescript": "^4.5.5"
-    },
-    "dependencies": {
-        "express": "^4.17.2",
-        "ts-node-dev": "^1.1.8"
     }
 }
