--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "dependencies": {
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
-        "express": "^4.17.2"
+        "express": "^4.17.2",
+        "morgan": "^1.10.0",
+        "morgan-body": "^2.6.6",
+        "winston": "^3.4.0"
     },
     "devDependencies": {
         "@types/dotenv-parse-variables": "^2.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.10",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.10.0",
