--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.2",
+        "mongoose": "^6.1.7",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
         "winston": "^3.4.0"
