--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.2",
@@ -21,6 +22,8 @@
         "winston": "^3.4.0"
     },
     "devDependencies": {
+        "@faker-js/faker": "^6.0.0-alpha.3",
+        "@types/bcrypt": "^5.0.0",
         "@types/dotenv-parse-variables": "^2.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
