--- a/config/.env.test
+++ b/config/.env.test
@@ -1,4 +1,9 @@
 LOGGER_LEVEL=silent
 
+APP_SECRET="test_secret"
+TOKEN_EXPIRE_DAYS=1d
+
+LOGGER_LEVEL=silent
+
 MONGO_URL="mongodb://localhost:13300/todo"
 MONGO_AUTO_INDEX=true
