--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "start": "ENV_FILE=./config/.env.prod  node -r tsconfig-paths/register ./out/index.js",
         "dev": "ENV_FILE=./config/.env.dev tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
-        "test": "ENV_FILE=./config/.env.test jest",
+        "test": "ENV_FILE=./config/.env.test jest --runInBand",
         "lint": "eslint"
     },
     "dependencies": {
@@ -16,9 +16,11 @@
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.7",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
+        "validator": "^13.7.0",
         "winston": "^3.4.0"
     },
     "devDependencies": {
@@ -27,9 +29,11 @@
         "@types/dotenv-parse-variables": "^2.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.10",
         "@types/supertest": "^2.0.11",
+        "@types/validator": "^13.7.1",
         "@typescript-eslint/eslint-plugin": "^5.10.0",
         "@typescript-eslint/parser": "^5.10.0",
         "eslint": "^8.7.0",
