--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "semi": ["warn", "never"],
-    "quotes": ["warn", "single"]
+    "semi": ["warn", "never"]
   }
 }
