--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.2",
         "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
         "mongoose": "^6.1.7",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
@@ -30,6 +31,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/lodash": "^4.14.178",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.10",
         "@types/supertest": "^2.0.11",
