--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "scripts": {
         "build": "tsc",
-        "start": "ENV_FILE=./config/.env.prod  node -r tsconfig-paths/register ./out/index.js",
+        "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./out/index.js",
         "dev": "ENV_FILE=./config/.env.dev tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
         "up": "docker-compose -f docker-compose.test.yml up -d",
         "down": "docker-compose -f docker-compose.test.yml down",
@@ -24,7 +24,9 @@
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
         "validator": "^13.7.0",
-        "winston": "^3.4.0"
+        "winston": "^3.4.0",
+        "typescript": "^4.5.5",
+        "tsconfig-paths": "^3.12.0"
     },
     "devDependencies": {
         "@faker-js/faker": "^6.0.0-alpha.3",
@@ -47,8 +49,6 @@
         "supertest": "^6.2.2",
         "ts-jest": "^27.1.3",
         "ts-node": "^10.4.0",
-        "ts-node-dev": "^1.1.8",
-        "tsconfig-paths": "^3.12.0",
-        "typescript": "^4.5.5"
+        "ts-node-dev": "^1.1.8"
     }
 }
