create error log files

--- a/config/.env.test
+++ b/config/.env.test
@@ -4,6 +4,7 @@ APP_SECRET="test_secret"
 TOKEN_EXPIRE_DAYS=1d
 
 LOGGER_LEVEL=silent
+ERROR_LOG="./logs/error.log"
 
 MONGO_URL="mongodb://localhost:13300/todo"
 MONGO_AUTO_INDEX=true
