change default error log path

--- a/config/.env.defaults
+++ b/config/.env.defaults
@@ -3,6 +3,6 @@ PORT=8080
 MORGAN_LOGGER=false
 MORGAN_BODY_LOGGER=false
 LOGGER_LEVEL=silent
-ERROR_LOG="./logs/error.log"
+ERROR_LOG="/logs/error.log"
 
 MONGO_AUTO_INDEX=false
