--- a/config/.env.defaults
+++ b/config/.env.defaults
@@ -3,6 +3,7 @@ PORT=8080
 MORGAN_LOGGER=false
 MORGAN_BODY_LOGGER=false
 LOGGER_LEVEL=silent
-ERROR_LOG="/logs/error.log"
+HTTP_LOG_DIR="/logs/http"
+ERROR_LOG_DIR="/logs/error"
 
 MONGO_AUTO_INDEX=false
