--- a/config/.env.schema
+++ b/config/.env.schema
@@ -6,7 +6,8 @@ TOKEN_EXPIRE_DAYS=
 MORGAN_LOGGER=
 MORGAN_BODY_LOGGER=
 LOGGER_LEVEL=
-ERROR_LOG=
+HTTP_LOG_DIR=
+ERROR_LOG_DIR=
 
 MONGO_URL=
 MONGO_AUTO_INDEX=
