--- a/config/.env.test
+++ b/config/.env.test
@@ -4,7 +4,8 @@ APP_SECRET="test_secret"
 TOKEN_EXPIRE_DAYS=1d
 
 LOGGER_LEVEL=silent
-ERROR_LOG="./logs/error.log"
+HTTP_LOG_DIR="./logs"
+ERROR_LOG_DIR="./logs"
 
 MONGO_URL="mongodb://localhost:13300/todo"
 MONGO_AUTO_INDEX=true
