--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
         "mongoose": "^6.1.7",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
+        "tsconfig-paths": "^3.12.0",
+        "typescript": "^4.5.5",
         "validator": "^13.7.0",
         "winston": "^3.4.0",
-        "typescript": "^4.5.5",
-        "tsconfig-paths": "^3.12.0"
+        "winston-daily-rotate-file": "^4.6.0"
     },
     "devDependencies": {
         "@faker-js/faker": "^6.0.0-alpha.3",
