--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "scripts": {
         "build": "tsc",
         "start": "ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./out/index.js",
-        "dev": "ENV_FILE=./config/.env.dev tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
-        "up": "docker-compose -f docker-compose.test.yml -p test_db up -d",
-        "down": "docker-compose -f docker-compose.test.yml down",
+        "dev": "ENV_FILE=./config/.env.dev  tsnd -r tsconfig-paths/register --respawn --transpile-only ./src/index.ts",
+        "db_up": "docker-compose -f docker-compose.dev.yml -p dev_db up -d",
+        "db_down": "docker-compose -f docker-compose.dev.yml down",
         "test": "ENV_FILE=./config/.env.test jest --runInBand",
         "lint": "eslint"
     },
