--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
         "dotenv-extended": "^2.9.0",
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.2",
@@ -32,6 +33,7 @@
     "devDependencies": {
         "@faker-js/faker": "^6.0.0-alpha.3",
         "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
         "@types/dotenv-parse-variables": "^2.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
